docs: :memo: Minor link fixes

--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -2,7 +2,7 @@
 sidebar: auto
 ---
 
-[pages]: /guide/pages
+[pages]: /guide/routing
 [plugins]: /guide/plugins
 [Vite's plugins]: https://vitejs.dev/plugins/
 [config reference]: https://vitejs.dev/config/
