docs: 📝 Moved app.ts docs section from config to development, config is now purely iles.config.ts related

--- a/docs/src/pages/guide/meta-tags.mdx
+++ b/docs/src/pages/guide/meta-tags.mdx
@@ -1,5 +1,5 @@
 [@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
-[app]: /config#your-app
+[app]: /guide/development#app-2
 [useHead]: https://unhead.unjs.io/usage/composables/use-head
 [useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
 [Head]: https://unhead.unjs.io/setup/vue/components
