docs: :memo: Override site wide MetaTags like ogImage etc for individual Recipes

--- a/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
+++ b/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
@@ -3,9 +3,11 @@ date: 2025-01-23
 author: Ahmed Kaja
 title: 'Vanilla Vue to îles'
 twitter: '@techakayy'
-# ogimage is relative to src/assets folder
-ogimage: 'assets/recipes/vanilla-vue-to-iles/vanilla-vue.jpg'
+# image is relative to src/assets folder
+image: 'assets/recipes/vanilla-vue-to-iles/vanilla-vue.jpg'
 ---
+{/* This component overrides MetaTags.vue */}
+<MetaTagsRecipe/>
 
 [vite index html]: https://vite.dev/guide/#index-html-and-project-root
 [static assets]: /guide/static-assets
