--- a/docs/src/pages/guide/static-assets.mdx
+++ b/docs/src/pages/guide/static-assets.mdx
@@ -1,13 +1,50 @@
+[@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
+[app]: /guide/development#app-2
 [meta tags]: /guide/meta-tags
 [useHead]: https://unhead.unjs.io/usage/composables/use-head
+[useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
+[Head]: https://unhead.unjs.io/setup/vue/components
+[site]: /guide/development#site
+[frontmatter]: /guide/development#pages
 [vite static assets]: https://vite.dev/guide/assets.html
 [vite public directory]: https://vite.dev/guide/assets.html#the-public-directory
+[vite index html]: https://vite.dev/guide/#index-html-and-project-root
 
 # Static Assets 🍃
 
 <Iles/> relies on the powerful static asset handling provided by [Vite][vite static assets] to efficiently serve and manage static assets, such as CSS and images.
 
 > Place CSS, images, JavaScript modules, and other assets within the `src` directory for bundling and optimization by [Vite][vite public directory].
+
+## `index.html`
+
+Îles automatically injects an `index.html` entry page as required by [Vite][vite index html], so you don't need to include an `index.html` file in your project root.
+
+However, you can provide a custom `index.html` entry page, giving you the flexibility to add external assets, such as `link` and `script` tags from CDNs, to all your pages.
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
+```
+
+> During development, Îles will automatically add the following [shell][app] script to the injected or user-provided `index.html` in the project root.
+>
+> `<script type="module" src="/@iles-entry"></script>`
+
+<Tip warn>
+In Vue single-file components, `link` and `script` tags are ignored as side-effects, so external assets should not be included in the `template` section of layouts or pages.
+</Tip>
 
 ## `useHead` Composable
 
@@ -63,7 +100,7 @@ useHead({
 
 > `useHead` options support both static values and reactive variables, such as `ref`, `computed`, and `reactive`.
 
-> In addition to using the `useHead` composable, external static assets can be added through other methods discussed in [meta tags] page.
+> In addition to using an `index.html` entry page and the `useHead` composable, external static assets can be added through other methods discussed in [meta tags] page.
 
 ## Public folder
 
@@ -74,10 +111,10 @@ Use the `public` folder for assets that:
 - Must retain their original file names.
 - Should be directly accessible via a URL (e.g., `/logo.png`).
 
-For example, an image at `publiclogo.png` can be referenced as:
+For example, an image at `public/logo.png` can be referenced as:
 
 ```html
 <img src="/logo.png" alt="Logo">
 ```
 
-Files placed in the `public` are copied as-is to the final output (by default, `dist` folder), making it ideal for assets like images, fonts, favicons, `robots.txt`, and `manifest.webmanifest`.
+Files placed in the `public` folder are copied as-is to the final output (by default, `dist` folder), making it ideal for assets like images, fonts, favicons, `robots.txt`, and `manifest.webmanifest`.
