docs: :memo: Added new Recipes set of pages, with the first recipe post

--- a/docs/src/pages/guide/index.mdx
+++ b/docs/src/pages/guide/index.mdx
@@ -1,6 +1,7 @@
 [introduction]: /guide/introduction
 [configuration reference]: /config
 [starter]: https://github.com/ElMassimo/create-iles
+[recipes]: /recipes
 
 # Getting Started
 
@@ -40,16 +41,16 @@ npm add -D iles@latest # or pnpm, yarn, bun
 <kbd class="-ml-2">src/</kbd>
   ├── <kbd>pages/</kbd>
   │    ├── index.vue
-  │    └── about-us.md 
+  │    └── about.md 
   │    └── posts/
   │         ├── intro.mdx
-  │         └── goodbye.mdx
+  │         └── our-story.mdx
   
 </code>
 </pre>
 </div>
 
-Now, follow the next [usage](#usage) section.
+Now, follow the next [usage](#usage) section. Also explore the [recipes] page to learn through examples.
 
 ## Usage 🚀
 
