--- a/docs/src/pages/guide/markdown.mdx
+++ b/docs/src/pages/guide/markdown.mdx
@@ -120,7 +120,7 @@ imported if they are placed in the [components] dir.
 
 ```vue
 <script setup>
-import Acknowledgements from '~/components/Acknowledgements.mdx' // not needed
+import Acknowledgements from '~/components/Acknowledgements.mdx' // not required
 </script>
 
 <template>
@@ -132,7 +132,7 @@ They can also be used in MDX files as components, which is the easiest way to
 reuse footers or sections that are repeated across documents.
 
 ```jsx
-import Acknowledgements from '~/components/Acknowledgements.mdx' // not needed
+import Acknowledgements from '~/components/Acknowledgements.mdx' // not required
 
 And _without_ further ado:
 
