feat: ✨ Support useSeoMeta from @unhead/vue, docs updated

--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -19,6 +19,9 @@ sidebar: auto
 [drafts]: /guide/markdown
 [useDocuments]: /guide/documents
 
+[vue-router]: https://next.router.vuejs.org/
+[@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
+
 # Configuration
 
 The following section is an overview of basic configuration for <Iles/>.
@@ -263,8 +266,3 @@ export default defineConfig({
   },
 })
 ```
-
-
-[vue-router]: https://next.router.vuejs.org/
-[@unhead/vue]: https://github.com/@unhead/vue
-[site]: #the-site
