--- a/docs/src/pages/faqs/index.mdx
+++ b/docs/src/pages/faqs/index.mdx
@@ -15,6 +15,8 @@
 [podcast]: https://dev.to/viewsonvue/islands-architecture-in-vue-with-maximo-mussini-vue-170
 
 [prettyUrls]: /config#prettyurls
+[vue-router]: https://next.router.vuejs.org/
+[@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
 
 # FAQs
 
@@ -97,8 +99,5 @@ Use Astro if you are not familiar with Vue, or don't like its template syntax.
 - [vue-router], [@unhead/vue], and [vite-plugin-pages]: the backbone of this library
 - [unplugin-vue-components]: allows you to avoid the boilerplate
 - [VitePress] and [vite-ssg]: for their different ideas on SSR
-
-[vue-router]: https://next.router.vuejs.org/
-[@unhead/vue]: https://github.com/@unhead/vue
 
 <Contact/>
