--- a/docs/src/pages/guide/meta-tags.mdx
+++ b/docs/src/pages/guide/meta-tags.mdx
@@ -1,6 +1,8 @@
-[@unhead/vue]: https://github.com/@unhead/vue
+[@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
 [app]: /config#your-app
-[useHead]: https://github.com/@unhead/vue#api
+[useHead]: https://unhead.unjs.io/usage/composables/use-head
+[useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
+[Head]: https://unhead.unjs.io/setup/vue/components
 [site]: /guide/development#site
 [frontmatter]: /guide/development#pages
 
@@ -12,32 +14,76 @@ for commonly used meta tags.
 
 There are several ways to customize `title` and `meta` tags in <Iles/>, powered by <kbd>[@unhead/vue]</kbd>.
 
-## [`useHead` Composable][useHead]
+## `useHead` Composable
 
-This helper can be used in the `setup` function or `<script setup>` of any Vue component.
+[useHead] can be used within the `setup` function or `<script setup>` of any Vue component.
 
 ```vue
 <script setup lang="ts">
 import { computed } from 'vue' 
   
 const { frontmatter } = usePage()
+const { title, description, tags, image } = frontmatter
 
 useHead({
+  title,
+  description,
   meta: [
+    // useSeoMeta can be used to better manage meta tags
     { property: 'og:type', content: 'website' },
-    { property: 'keywords', content: computed(() => frontmatter.tags) },
+    { property: 'og:image', content: image },
   ],
+  htmlAttrs: { lang: 'en-US' },
+  bodyAttrs: { class: 'dark-mode', 'data-theme': 'light' },
+  link: [],
+  style: [],
+  noscript: [],
+  // useScript can also be used to load scripts
+  script: [],
 })
 </script>
 ```
 
-Notice that values can be static or computed.
+> `useHead` options support both static values and reactive variables, such as `ref`, `computed`, and `reactive`.
+
+## `useSeoMeta` Composable
+
+[useSeoMeta] can be used within the `setup` function or `<script setup>` of any Vue component.
+
+It lets you define your site's SEO meta as a flat object and helps you avoid common mistakes, such as using `name` instead of `property` as well typos with over 100+ meta tags fully typed.
+
+```vue
+<script setup lang="ts">
+import { computed } from 'vue' 
+  
+const { frontmatter } = usePage()
+const { title, description, tags, image } = frontmatter
+
+useSeoMeta({
+  // Refer to type definition for the full list
+  title,
+  description,
+  author: 'Máximo Mussini',
+  charset: 'utf-8',
+  viewport: 'width=device-width, initial-scale=1',
+  generator: 'Îles v0.10.0-beta.1',
+  keywords: tags?.toString(),
+  ogTitle: title,
+  ogDescription: description,
+  ogType: 'website',
+  ogImage: image,
+  ogImageAlt: title,
+})
+</script>
+```
+
+> `useSeoMeta` options support both static values and reactive variables, such as `ref`, `computed`, and `reactive`.
 
 <AutoImported/>
 
-## [`<Head>` Component](https://github.com/@unhead/vue#head)
+## `<Head>` Component
 
-Besides <kbd>[useHead]</kbd>, you can also manipulate head tags using the `<Head>` component:
+Besides <kbd>[useHead](#usehead-composable)</kbd> and <kbd>[useSeoMeta](#useseometa-composable)</kbd>, you can also manipulate head tags using the [`<Head>`][Head] component:
 
 ```vue
 <template>
@@ -52,10 +98,10 @@ Besides <kbd>[useHead]</kbd>, you can also manipulate head tags using the `<Head
 
 This is often more intuitive, specially for dynamic values.
 
-## [App Meta Tags][app]
+## App Meta Tags
 
 Finally, you can use `head` in <kbd>[src/app.ts][app]</kbd>, which supports the
-same format as <kbd>[useHead]</kbd>.
+same format as <kbd>[useHead](#usehead-composable)</kbd>.
 
 ```ts
 import { defineApp } from 'iles'
@@ -63,6 +109,7 @@ import { defineApp } from 'iles'
 export default defineApp({
   head: {
     htmlAttrs: { lang: 'en-US' },
+    bodyAttrs: { class: 'dark-mode', 'data-theme': 'light' },
   },
 })
 ```
@@ -77,7 +124,7 @@ export default defineApp({
     return {
       meta: [
         { property: 'author', content: site.author },
-        { property: 'keywords', content: computed(() => frontmatter.tags) },
+        { property: 'keywords', content: () => frontmatter.tags },
       ]
     }
   },
