feat: :sparkles: Support unplugin-auto-import with new `autoImport` key in iles config, docs updated

--- a/docs/src/pages/faqs/index.mdx
+++ b/docs/src/pages/faqs/index.mdx
@@ -3,9 +3,10 @@
 [MDX]: https://github.com/mdx-js/mdx
 [Astro]: https://docs.astro.build/core-concepts/component-hydration
 [VitePress]: https://vitepress.vuejs.org/
-[vite-ssg]: https://github.com/antfu/vite-ssg
+[Vite-SSG]: https://github.com/antfu-collective/vite-ssg
 [vite-plugin-pages]: https://github.com/hannoeru/vite-plugin-pages
 [unplugin-vue-components]: https://github.com/antfu/unplugin-vue-components
+[unplugin-auto-import]: https://github.com/unplugin/unplugin-auto-import
 
 [frameworks]: /guide/frameworks
 [hydration]: /guide/hydration
@@ -98,6 +99,7 @@ Use Astro if you are not familiar with Vue, or don't like its template syntax.
 - [MDX]: provides amazing flexibility when processing Markdown
 - [vue-router], [@unhead/vue], and [vite-plugin-pages]: the backbone of this library
 - [unplugin-vue-components]: allows you to avoid the boilerplate
-- [VitePress] and [vite-ssg]: for their different ideas on SSR
+- [unplugin-auto-import]: lets you focus on building your site
+- [VitePress] and [Vite-SSG]: for their different ideas on SSR
 
 <Contact/>
