refactor: ♻️ docs updated to use auto-imports of APIs and composables within logic folder

--- a/docs/src/pages/guide/client-scripts.mdx
+++ b/docs/src/pages/guide/client-scripts.mdx
@@ -64,7 +64,7 @@ choose where to place them by rendering them as islands.
 
 ```vue
 <script setup lang="ts">
-import GalleryPreloader from '~/logic/imagePreloader' // .ts
+import GalleryPreloader from '~/composables/imagePreloader' // .ts
 </script>
 
 <template>
