--- a/docs/src/pages/guide/development.mdx
+++ b/docs/src/pages/guide/development.mdx
@@ -238,7 +238,7 @@ Page data is available directly in the component modules:
 
 ```vue
 <script setup lang="ts">
-import { usePosts } from '~/logic/posts'
+import { usePosts } from '~/composables/posts'
 
 const posts = usePosts()
 </script>
