--- a/docs/src/pages/guide/turbo.mdx
+++ b/docs/src/pages/guide/turbo.mdx
@@ -1,7 +1,7 @@
 [quicklink]: https://github.com/GoogleChromeLabs/quicklink
 [hotwired]: https://github.com/hotwired/turbo
 [turbo]: /config#turbo-experimental
-[client scripts]: /guide/client-scripts
+[client scripts]: /guide/hydration#client-script-block
 [islands]: /guide/hydration
 [supported frameworks]: /guide/frameworks
 [modules]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules#other_differences_between_modules_and_standard_scripts
