--- a/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
+++ b/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
@@ -19,7 +19,6 @@ image: 'assets/recipes/vanilla-vue-to-iles/vanilla-vue.jpg'
 [project structure]: /guide/development
 [frameworks]: /guide/frameworks
 [client directives]: /guide/hydration
-[client scripts]: /guide/client-scripts
 
 New to Vue? 💚 Scaffold a new Vue project using the following command. Then, convert it into an îles project.
 
@@ -244,7 +243,7 @@ npx iles build # or pnpm, yarn, bun
 
 Check the `dist` folder to see the three HTML pages generated along with their CSS assets. 
 
-Note that `zero` JavaScript is shipped. To add interactive Islands, refer to the [frameworks] and [hydration] pages to learn about hydration client scripts.
+Note that `zero` JavaScript is shipped. To add interactive îslands, refer to the [hydration] and [frameworks] pages.
 
 <Image src='@/assets/recipes/vanilla-vue-to-iles/iles-build.jpg' alt="Iles Build" wide narrow={false} />
 
@@ -268,6 +267,6 @@ If you used Netlify Drop, once deployment has completed successfully, click the 
 
 Now, learn about the [project structure] to familiarize yourself with the various conventions and best practices in îles.
 
-To add interactive îslands to your static Îles site, explore using [frameworks], [client directives], and [client scripts].
+To add interactive îslands to your static Îles site, explore using [hydration] and [frameworks].
 
 Well Done. Have a joyful Îles experience!
