--- a/docs/src/pages/guide/frameworks.mdx
+++ b/docs/src/pages/guide/frameworks.mdx
@@ -6,7 +6,7 @@
 [Preact]: /guide/plugins#preactpreset-vite
 [SolidJS]: /guide/plugins#vite-plugin-solid
 [Svelte]: /guide/plugins#sveltejsvite-plugin-svelte
-[vanilla JS]: /guide/client-scripts#vanilla-components
+[vanilla JS]: /guide/hydration#vanilla-components
 
 [useDark]: https://vueuse.org/core/usedark/
 
