--- a/docs/src/pages/guide/introduction.mdx
+++ b/docs/src/pages/guide/introduction.mdx
@@ -11,7 +11,7 @@ tocLevel: 3
 [Preact]: /guide/plugins#preactpreset-vite
 [SolidJS]: /guide/plugins#vite-plugin-solid
 [Svelte]: /guide/plugins#sveltejsvite-plugin-svelte
-[vanilla JS]: /guide/client-scripts#vanilla-components
+[vanilla JS]: /guide/hydration#vanilla-components
 
 [hydration]: /guide/hydration
 [markdown]: /guide/markdown
