docs: :thread: Docs readability - renamed Development to Project Structure

--- a/docs/src/pages/faqs/troubleshooting.mdx
+++ b/docs/src/pages/faqs/troubleshooting.mdx
@@ -1,6 +1,6 @@
 [GitHub Issues]: https://github.com/ElMassimo/iles/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc
 [GitHub Discussions]: https://github.com/ElMassimo/iles/discussions
-[layout]: /guide/development#layouts
+[layout]: /guide/project-structure#layouts
 [deployment]: /guide/deployment
 
 # Troubleshooting
