--- a/docs/src/pages/guide/documents.mdx
+++ b/docs/src/pages/guide/documents.mdx
@@ -1,6 +1,6 @@
 [glob]: https://vitejs.dev/guide/features.html#glob-import
 [mdx documents]: /guide/markdown
-[pageData]: /guide/development#using-page-data
+[pageData]: /guide/project-structure#using-page-data
 [ref sugar]: https://github.com/vuejs/rfcs/discussions/369
 
 # Documents 🗃
