--- a/docs/src/pages/guide/markdown.mdx
+++ b/docs/src/pages/guide/markdown.mdx
@@ -1,8 +1,8 @@
 [MDX]: https://github.com/mdx-js/mdx
-[components]: /guide/development#components
+[components]: /guide/project-structure#components
 [vue-jsx]: https://github.com/vuejs/jsx-next#slot
 [frontmatter]: https://jekyllrb.com/docs/front-matter/
-[meta]: /guide/development#using-page-data
+[meta]: /guide/project-structure#using-page-data
 [component]: https://v3.vuejs.org/api/built-in-components.html#component
 [mdxComponents]: /config#mdxcomponents
 [frameworks]: /guide/frameworks
