--- a/docs/src/pages/guide/project-structure.mdx
+++ b/docs/src/pages/guide/project-structure.mdx
@@ -19,7 +19,7 @@
 [unplugin-auto-import]: https://github.com/unplugin/unplugin-auto-import#configuration
 [unplugin-vue-components]: https://github.com/unplugin/unplugin-vue-components#configuration
 
-# Development 💻
+# Project Structure 💻
 
 In this section, we'll cover the basics to start building an <Iles/> application.
 
