--- a/docs/src/pages/guide/static-assets.mdx
+++ b/docs/src/pages/guide/static-assets.mdx
@@ -1,11 +1,11 @@
 [@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
-[app]: /guide/development#app-2
+[app]: /guide/project-structure#app-2
 [meta tags]: /guide/meta-tags
 [useHead]: https://unhead.unjs.io/usage/composables/use-head
 [useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
 [Head]: https://unhead.unjs.io/setup/vue/components
-[site]: /guide/development#site
-[frontmatter]: /guide/development#pages
+[site]: /guide/project-structure#site
+[frontmatter]: /guide/project-structure#pages
 [vite static assets]: https://vite.dev/guide/assets.html
 [vite public directory]: https://vite.dev/guide/assets.html#the-public-directory
 [vite index html]: https://vite.dev/guide/#index-html-and-project-root
