--- a/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
+++ b/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
@@ -16,7 +16,7 @@ image: 'assets/recipes/vanilla-vue-to-iles/vanilla-vue.jpg'
 [hydration]: /guide/hydration
 [VitePress]: https://vitepress.dev/
 [Vite-SSG]: https://github.com/antfu-collective/vite-ssg
-[project structure]: /guide/development
+[project structure]: /guide/project-structure
 [frameworks]: /guide/frameworks
 [client directives]: /guide/hydration
 
