--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -7,9 +7,9 @@ sidebar: auto
 [Vite's plugins]: https://vitejs.dev/plugins/
 [config reference]: https://vitejs.dev/config/
 
-[site]: /guide/development#site
+[site]: /guide/project-structure#site
 [meta tags]: /guide/meta-tags
-[sitemap]: /guide/development#sitemap
+[sitemap]: /guide/project-structure#sitemap
 
 [deployment]: /guide/deployment 
 [VitePress]: /faqs#vitepress
