--- a/docs/src/pages/guide/meta-tags.mdx
+++ b/docs/src/pages/guide/meta-tags.mdx
@@ -1,10 +1,10 @@
 [@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
-[app]: /guide/development#app-2
+[app]: /guide/project-structure#app-2
 [useHead]: https://unhead.unjs.io/usage/composables/use-head
 [useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
 [Head]: https://unhead.unjs.io/setup/vue/components
-[site]: /guide/development#site
-[frontmatter]: /guide/development#pages
+[site]: /guide/project-structure#site
+[frontmatter]: /guide/project-structure#pages
 
 # Head and Meta Tags 🏷
 
