--- a/docs/src/pages/guide/routing.mdx
+++ b/docs/src/pages/guide/routing.mdx
@@ -1,5 +1,5 @@
-[Page]: /guide/development#pages
-[Pages]: /guide/development#pages
+[Page]: /guide/project-structure#pages
+[Pages]: /guide/project-structure#pages
 [frontmatter]: /guide/markdown#frontmatter-and-meta
 [Vue Router]: https://next.router.vuejs.org/
 [getStaticPaths]: #generating-dynamic-routes
