--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -21,5 +21,5 @@ features:
     href: /guide/markdown
   - title: ⚡ Batteries Included
     details: Layouts, routing, frontmatter for pages, plugins, and more.
-    href: /guide/development
+    href: /guide/project-structure
 ---
