docs: :thread: Docs readability - renamed Meta Tags to Head And Meta

--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -8,7 +8,7 @@ sidebar: auto
 [config reference]: https://vitejs.dev/config/
 
 [site]: /guide/project-structure#site
-[meta tags]: /guide/meta-tags
+[meta tags]: /guide/head-and-meta
 [sitemap]: /guide/project-structure#sitemap
 
 [deployment]: /guide/deployment 
