--- a/docs/src/pages/guide/plugins.mdx
+++ b/docs/src/pages/guide/plugins.mdx
@@ -45,7 +45,7 @@ tocLevel: 3
 [feed]: https://github.com/jpmonette/feed
 
 [pageData]: /guide/project-structure#using-page-data
-[SEO tags]: /guide/meta-tags
+[SEO tags]: /guide/head-and-meta
 [RSS feeds]: /guide/rss
 
 [alias]: /guide/project-structure#default-app-structure
