--- a/docs/src/pages/guide/static-assets.mdx
+++ b/docs/src/pages/guide/static-assets.mdx
@@ -1,6 +1,6 @@
 [@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
 [app]: /guide/project-structure#app-2
-[meta tags]: /guide/meta-tags
+[head and meta]: /guide/head-and-meta
 [useHead]: https://unhead.unjs.io/usage/composables/use-head
 [useSeoMeta]: https://unhead.unjs.io/usage/composables/use-seo-meta
 [Head]: https://unhead.unjs.io/setup/vue/components
@@ -100,7 +100,7 @@ useHead({
 
 > `useHead` options support both static values and reactive variables, such as `ref`, `computed`, and `reactive`.
 
-> In addition to using an `index.html` entry page and the `useHead` composable, external static assets can be added through other methods discussed in [meta tags] page.
+> In addition to using an `index.html` entry page and the `useHead` composable, external static assets can be added through other methods discussed in the [head and meta] page.
 
 ## Public folder
 
