--- a/docs/src/pages/guide/islands.mdx
+++ b/docs/src/pages/guide/islands.mdx
@@ -11,9 +11,9 @@
 [Demo]: https://the-vue-point-with-iles.netlify.app/cat-zone
 [blog repo]: https://github.com/ElMassimo/iles/blob/main/playground/the-vue-point/src/components/CatDisplay.vue
 
-[previous section]: /guide/hydration
-[strategies]: /guide/hydration#clientload
-[strategy]: /guide/hydration#clientload
+[previous section]: /guide/islands
+[strategies]: /guide/islands#clientload
+[strategy]: /guide/islands#clientload
 [layout]: /guide/project-structure#layouts
 [components]: /guide/project-structure#components
 [frameworks]: /guide/frameworks
