--- a/docs/src/pages/guide/pwa.mdx
+++ b/docs/src/pages/guide/pwa.mdx
@@ -6,7 +6,7 @@
 [autoUpdate]: https://vite-plugin-pwa.netlify.app/guide/auto-update.html
 [PWA configuration]: https://github.com/ElMassimo/iles/blob/main/docs/iles.config.ts
 [ReloadPrompt component]: https://github.com/ElMassimo/iles/blob/main/docs/src/components/ReloadPrompt.vue
-[client script block]: /guide/hydration#client-script-block
+[client script block]: /guide/islands#client-script-block
 [@userquin]: https://twitter.com/userquin
 
 # Progressive Web Application (PWA)
