--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -12,7 +12,7 @@ heroAlt: îles logo
 features:
   - title: 🏝 Partial Hydration
     details: Ship JS only for the interactive bits, by default that's zero.
-    href: /guide/hydration
+    href: /guide/islands
   - title: 🧱 Multi-Framework
     details: Build islands with Vue, Preact, SolidJS, Svelte, or plain JS.
     href: /guide/frameworks
