--- a/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
+++ b/docs/src/pages/recipes/vanilla-vue-to-iles.mdx
@@ -13,12 +13,12 @@ image: 'assets/recipes/vanilla-vue-to-iles/vanilla-vue.jpg'
 [static assets]: /guide/static-assets
 [usage]: /guide#usage
 [frameworks]: /guide/frameworks
-[hydration]: /guide/hydration
+[islands]: /guide/islands
 [VitePress]: https://vitepress.dev/
 [Vite-SSG]: https://github.com/antfu-collective/vite-ssg
 [project structure]: /guide/project-structure
 [frameworks]: /guide/frameworks
-[client directives]: /guide/hydration
+[client directives]: /guide/islands
 
 New to Vue? 💚 Scaffold a new Vue project using the following command. Then, convert it into an îles project.
 
@@ -243,7 +243,7 @@ npx iles build # or pnpm, yarn, bun
 
 Check the `dist` folder to see the three HTML pages generated along with their CSS assets. 
 
-Note that `zero` JavaScript is shipped. To add interactive îslands, refer to the [hydration] and [frameworks] pages.
+Note that `zero` JavaScript is shipped. To add interactive îslands, refer to the [islands] and [frameworks] pages.
 
 <Image src='@/assets/recipes/vanilla-vue-to-iles/iles-build.jpg' alt="Iles Build" wide narrow={false} />
 
@@ -267,6 +267,6 @@ If you used Netlify Drop, once deployment has completed successfully, click the 
 
 Now, learn about the [project structure] to familiarize yourself with the various conventions and best practices in îles.
 
-To add interactive îslands to your static Îles site, explore using [hydration] and [frameworks].
+To add interactive îslands to your static Îles site, explore using [islands] and [frameworks].
 
 Well Done. Have a joyful Îles experience!
