--- a/docs/src/pages/guide/project-structure.mdx
+++ b/docs/src/pages/guide/project-structure.mdx
@@ -6,7 +6,7 @@
 [config]: /config#configuring-%C3%AEles
 [frontmatter]: /guide/markdown#frontmatter-and-meta
 [routing]: /guide/routing
-[hydration]: /guide/hydration
+[islands]: /guide/islands
 [siteUrl]: /config#siteurl
 [useDocuments]: /guide/documents
 [frameworks]: /guide/frameworks
@@ -411,7 +411,7 @@ Set it to `false` to avoid adding social tags such as `og:title` and `twitter:de
 
 Page information is available in a debug panel, similar to VitePress, but you may also access an _Islands_ inspector in Vue devtools.
 
-This can be useful when debugging [islands hydration][hydration].
+This can be useful when debugging [islands hydration][islands].
 
 ## Iles Configuration ⚙️
 
