docs: :thread: Docs readability - renamed Plugins page to Modules

--- a/docs/src/components/PageHooks.mdx
+++ b/docs/src/components/PageHooks.mdx
@@ -1,5 +1,5 @@
-[extendFrontmatter]: /guide/plugins#islandspages
-[extendRoute]: /guide/plugins#islandspages
+[extendFrontmatter]: /guide/modules#islandspages
+[extendRoute]: /guide/modules#islandspages
 
 <Tip title="Page Hooks 🎣">
 You can customize all pages using the <kbd>[extendFrontmatter]</kbd> and <kbd>[extendRoute]</kbd> hooks.
