--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -3,8 +3,8 @@ sidebar: auto
 ---
 
 [pages]: /guide/routing
-[plugins]: /guide/plugins
-[Vite's plugins]: https://vitejs.dev/plugins/
+[modules]: /guide/modules
+[Vite's plugins]: https://vitejs.dev/modules/
 [config reference]: https://vitejs.dev/config/
 
 [site]: /guide/project-structure#site
@@ -43,7 +43,7 @@ export default defineConfig({
 })
 ```
 
-> Visit the _[Plugins]_ section for more details about the [pre-configured Vite.js plugins](/guide/plugins#vite-plugins).
+> Visit the [_Modules and Plugins_][modules] guide for more details about the [pre-configured Vite.js plugins](/guide/modules#vite-plugins).
 
 ## Configuring <span class="hidden" aria-hidden="true">îles</span> <Iles heading/>
 
@@ -76,7 +76,7 @@ By default drafts will be displayed during development, but will be excluded whe
 
 - **Type:** `IlesModuleOption[]`
 
-<Iles/> modules to apply in the site. [Read the _Plugins and Modules_ guide][plugins].
+<Iles/> modules to apply in the site. Read the [_Modules and Plugins_][modules] guide.
 
 ### `turbo` (experimental)
 
