--- a/docs/src/pages/guide/pwa.mdx
+++ b/docs/src/pages/guide/pwa.mdx
@@ -1,4 +1,4 @@
-[module]: /guide/plugins
+[module]: /guide/modules#islandspwa
 [@islands/pwa]: https://github.com/ElMassimo/iles/tree/main/packages/pwa
 [vite-plugin-pwa]: https://github.com/antfu/vite-plugin-pwa
 [generateSW]: https://vite-plugin-pwa.netlify.app/workbox/generate-sw.html
