--- a/docs/src/pages/guide/routing.mdx
+++ b/docs/src/pages/guide/routing.mdx
@@ -8,7 +8,7 @@
 [dynamic source]: https://github.com/ElMassimo/iles/blob/main/docs/src/pages/dynamic/%5Bsection%5D.vue
 [dynamic parameters]: #dynamic-routes
 
-[@islands/pages]: /guide/plugins#islandspages
+[@islands/pages]: /guide/modules#islandspages
 
 [prettyUrls]: /config#prettyurls
 
