--- a/docs/src/pages/guide/rss.mdx
+++ b/docs/src/pages/guide/rss.mdx
@@ -1,6 +1,6 @@
 [pages]: /guide/project-structure#pages
 [routing]: /guide/routing
-[@islands/feed]: /guide/plugins#islandsfeed
+[@islands/feed]: /guide/modules#islandsfeed
 [usePage]: /guide/project-structure#using-page-data
 [path]: /guide/routing#override-routes
 
