--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -20,6 +20,6 @@ features:
     details: Use components inside Markdown, with auto-import.
     href: /guide/markdown
   - title: ⚡ Batteries Included
-    details: Layouts, routing, frontmatter for pages, plugins, and more.
+    details: Layouts, routing, frontmatter for pages, modules, and more.
     href: /guide/project-structure
 ---
