--- a/docs/src/pages/guide/frameworks.mdx
+++ b/docs/src/pages/guide/frameworks.mdx
@@ -2,10 +2,10 @@
 [client:none]: /guide/islands#clientnone
 [mdx files]: /guide/markdown
 
-[Vue]: /guide/plugins#vitejsplugin-vue
-[Preact]: /guide/plugins#preactpreset-vite
-[SolidJS]: /guide/plugins#vite-plugin-solid
-[Svelte]: /guide/plugins#sveltejsvite-plugin-svelte
+[Vue]: /guide/modules#vitejsplugin-vue
+[Preact]: /guide/modules#preactpreset-vite
+[SolidJS]: /guide/modules#vite-plugin-solid
+[Svelte]: /guide/modules#sveltejsvite-plugin-svelte
 [vanilla JS]: /guide/islands#vanilla-components
 
 [useDark]: https://vueuse.org/core/usedark/
