--- a/docs/src/pages/guide/introduction.mdx
+++ b/docs/src/pages/guide/introduction.mdx
@@ -7,10 +7,10 @@ tocLevel: 3
 [Vue]: https://v3.vuejs.org/
 [MDX]: https://github.com/mdx-js/mdx
 
-[Vue Plugin]: /guide/plugins#vitejsplugin-vue
-[Preact]: /guide/plugins#preactpreset-vite
-[SolidJS]: /guide/plugins#vite-plugin-solid
-[Svelte]: /guide/plugins#sveltejsvite-plugin-svelte
+[Vue Plugin]: /guide/modules#vitejsplugin-vue
+[Preact]: /guide/modules#preactpreset-vite
+[SolidJS]: /guide/modules#vite-plugin-solid
+[Svelte]: /guide/modules#sveltejsvite-plugin-svelte
 [vanilla JS]: /guide/islands#vanilla-components
 
 [islands]: /guide/islands
