--- a/docs/src/pages/guide/islands.mdx
+++ b/docs/src/pages/guide/islands.mdx
@@ -4,9 +4,9 @@
 [intersectionobserver]: https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API
 [matchMedia]: https://developer.mozilla.org/en-US/docs/Web/API/Window/matchMedia
 
-[Preact]: /guide/plugins#preactpreset-vite
-[SolidJS]: /guide/plugins#vite-plugin-solid
-[Svelte]: /guide/plugins#sveltejsvite-plugin-svelte
+[Preact]: /guide/modules#preactpreset-vite
+[SolidJS]: /guide/modules#vite-plugin-solid
+[Svelte]: /guide/modules#sveltejsvite-plugin-svelte
 [Suspense]: https://vuejs.org/guide/built-ins/suspense
 [Demo]: https://the-vue-point-with-iles.netlify.app/cat-zone
 [blog repo]: https://github.com/ElMassimo/iles/blob/main/playground/the-vue-point/src/components/CatDisplay.vue
